--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+// @import "reset";
 @import "cita";
 @import "header";
 @import "banner";
@@ -7,3 +8,5 @@
 @import "separador";
 @import "footer";
 @import "panal";
+@import "btn-pink";
+@import "luminoso";
