--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,12 +2,18 @@
 $white:#fff;
 $Hawaiian-Tan:#ac501a;
 $Tower-grey:#acb7bd;
-
+$Red-ribbon:#e20048;
+$Tundora:#484848;
+$Yellow:#fff900;
+$Blaze-orange:#ff6c00;
 
 
 $nav-element:$Hawaiian-Tan;
 $bg-light:$Tower-grey;
-
+$boton-rosa-footer:$Red-ribbon;
+$luminoso-light-off:$Tundora;
+$luminoso-light-on:$Yellow;
+$luminoso-shadow:$Blaze-orange;
 
 //fonts
 @font-face{
